<resources>
    <string name="app_name">Business Card</string>
    <string name="add_card">Add card</string>
    <string name="business_card">Business Cards</string>
    <string name="organization_name">Organization Name</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="job_title">Job Title</string>
    <string name="phone_number">123 456 7890</string>
    <string name="email">example@email.com</string>
    <string name="add_phone_number">Phone number</string>
    <string name="add_email">Email</string>
    <string name="card_color">Card color</string>
    <string name="label_success">Card created successfully</string>
    <string name="label_share">Share</string>
    <string name="salvar">Save</string>
</resources>